--- a/styles.css
+++ b/styles.css
@@ -235,11 +235,12 @@ body {
     position: relative;
     min-height: 700px;
 }
+
 .wavy-background svg.background-waves {
     position: absolute;
     top: -100px;
-    left: 0;
-    width: 100%;
+    left: -10%;      /* <-- CAMBIO AQUÍ: Lo movemos un poco a la izquierda */
+    width: 120%;      /* <-- CAMBIO AQUÍ: Lo hacemos 20% más ancho */
     height: auto;
     z-index: 0;
     opacity: 0.9;
@@ -307,4 +308,5 @@ body {
 .vitamin-orb-a { background-color: #E25E5A; animation: orbit 9s linear infinite; animation-delay: -12s; }
 
 /* --- FIN DEL FRAGMENTO --- */
+
 
